--- a/_site.yml
+++ b/_site.yml
@@ -4,4 +4,7 @@ navbar:
   left:
     - text: "Home"
       href: index.html
+  right:
+    - icon: fa-github fa-lg
+      href: https://github.com/my-cabbages/ESL_ISLR
 output_dir: "docs"
